Fixed overflow.

--- a/style/code.css
+++ b/style/code.css
@@ -9,6 +9,7 @@ code.code-block {
     background-color: rgb(250, 250, 250);
     padding: 15px;
     font-size: 16px;
+    overflow-x: scroll;
 }
 
 code.code-inline {
@@ -49,4 +50,8 @@ code.code-inline {
 
 .code-variable {
     color:rgb(0, 16, 128);
+}
+
+.further-reading {
+    overflow-x: scroll;
 }
